@@ -31,7 +31,7 @@ let mk_cast = function
     (c,(_,None)) -> c
   | (c,(_,Some ty)) -> CCast(join_loc (constr_loc c) (constr_loc ty), c, CastConv (DEFAULTcast, ty))
 
-let loc_of_binder_let = function
+let loc_of_binder = function
   | LocalRawAssum ((loc,_)::_,_,_)::_ -> loc
   | LocalRawDef ((loc,_),_)::_ -> loc
   | _ -> dummy_loc
@@ -87,8 +87,8 @@ let lpar_id_coloneq =
               | _ -> err ())
         | _ -> err ())
 
-let impl_ident =
-  Gram.Entry.of_parser "impl_ident"
+let impl_ident_head =
+  Gram.Entry.of_parser "impl_ident_head"
     (fun strm ->
       match get_tok (stream_nth 0 strm) with
 	| KEYWORD "{" ->
@@ -129,8 +129,8 @@ let aliasvar = function CPatAlias (_, _, id) -> Some (Name id) | _ -> None
 GEXTEND Gram
   GLOBAL: binder_constr lconstr constr operconstr sort global
   constr_pattern lconstr_pattern Constr.ident
-  binder binder_let binders_let record_declaration
-  binders_let_fixannot typeclass_constraint pattern appl_arg;
+  closed_binder binders binders_fixannot
+  record_declaration typeclass_constraint pattern appl_arg;
   Constr.ident:
     [ [ id = Prim.ident -> id
 
@@ -232,13 +232,13 @@ GEXTEND Gram
       (id, Topconstr.abstract_constr_expr c (binders_of_lidents params)) ] ]
   ;
   binder_constr:
-    [ [ forall; bl = binder_list; ","; c = operconstr LEVEL "200" ->
+    [ [ forall; bl = open_binders; ","; c = operconstr LEVEL "200" ->
           mkCProdN loc bl c
-      | lambda; bl = binder_list; [ "=>" | "," ]; c = operconstr LEVEL "200" ->
+      | lambda; bl = open_binders; [ "=>" | "," ]; c = operconstr LEVEL "200" ->
           mkCLambdaN loc bl c
-      | "let"; id=name; bl = binders_let; ty = type_cstr; ":=";
+      | "let"; id=name; bl = binders; ty = type_cstr; ":=";
         c1 = operconstr LEVEL "200"; "in"; c2 = operconstr LEVEL "200" ->
-          let loc1 = loc_of_binder_let bl in
+          let loc1 = loc_of_binder bl in
           CLetIn(loc,id,mkCLambdaN loc1 bl (mk_cast(c1,ty)),c2)
       | "let"; fx = single_fix; "in"; c = operconstr LEVEL "200" ->
           let fixp = mk_single_fix fx in
@@ -296,7 +296,7 @@ GEXTEND Gram
       | "cofix" -> false ] ]
   ;
   fix_decl:
-    [ [ id=identref; bl=binders_let_fixannot; ty=type_cstr; ":=";
+    [ [ id=identref; bl=binders_fixannot; ty=type_cstr; ":=";
         c=operconstr LEVEL "200" ->
           (id,fst bl,snd bl,c,ty) ] ]
   ;
@@ -363,15 +363,7 @@ GEXTEND Gram
       | n = INT -> CPatPrim (loc, Numeral (Bigint.of_string n))
       | s = string -> CPatPrim (loc, String s) ] ]
   ;
-  binder_list:
-    [ [ idl=LIST1 name; bl=binders_let ->
-      LocalRawAssum (idl,Default Explicit,CHole (loc, Some (Evd.BinderType (snd (List.hd idl)))))::bl
-    | idl=LIST1 name; ":"; c=lconstr ->
-        [LocalRawAssum (idl,Default Explicit,c)]
-    | cl = binders_let -> cl
-    ] ]
-  ;
-  binder_assum:
+  impl_ident_tail:
     [ [ "}" -> fun id -> LocalRawAssum([id], Default Implicit, CHole(loc, None))
     | idl=LIST1 name; ":"; c=lconstr; "}" ->
         (fun id -> LocalRawAssum (id::idl,Default Implicit,c))
@@ -388,47 +380,56 @@ GEXTEND Gram
 	rel=OPT constr; "}" -> (id, CMeasureRec (m,rel))
     ] ]
   ;
-  binders_let_fixannot:
-    [ [ id=impl_ident; assum=binder_assum; bl = binders_let_fixannot ->
-	(assum (loc, Name id) :: fst bl), snd bl
-    | f = fixannot -> [], f
-    | b = binder_let; bl = binders_let_fixannot -> b @ fst bl, snd bl
-    | -> [], (None, CStructRec)
+  binders_fixannot:
+    [ [ id = impl_ident_head; assum = impl_ident_tail; bl = binders_fixannot ->
+          (assum (loc, Name id) :: fst bl), snd bl
+      | f = fixannot -> [], f
+      | b = binder; bl = binders_fixannot -> b @ fst bl, snd bl
+      | -> [], (None, CStructRec)
     ] ]
   ;
-  binders_let:
-    [ [ b = binder_let; bl = binders_let -> b @ bl
-    | -> [] ] ]
-  ;
-  binder_let:
-    [ [ id=name ->
-      [LocalRawAssum ([id],Default Explicit,CHole (loc, None))]
-    | "("; id=name; idl=LIST1 name; ":"; c=lconstr; ")" ->
-        [LocalRawAssum (id::idl,Default Explicit,c)]
-    | "("; id=name; ":"; c=lconstr; ")" ->
-        [LocalRawAssum ([id],Default Explicit,c)]
-    | "("; id=name; ":="; c=lconstr; ")" ->
-        [LocalRawDef (id,c)]
-    | "("; id=name; ":"; t=lconstr; ":="; c=lconstr; ")" ->
-        [LocalRawDef (id,CCast (join_loc (constr_loc t) loc,c, CastConv (DEFAULTcast,t)))]
-    | "{"; id=name; "}" ->
-        [LocalRawAssum ([id],Default Implicit,CHole (loc, None))]
-    | "{"; id=name; idl=LIST1 name; ":"; c=lconstr; "}" ->
-        [LocalRawAssum (id::idl,Default Implicit,c)]
-    | "{"; id=name; ":"; c=lconstr; "}" ->
-        [LocalRawAssum ([id],Default Implicit,c)]
-    | "{"; id=name; idl=LIST1 name; "}" ->
-        List.map (fun id -> LocalRawAssum ([id],Default Implicit,CHole (loc, None))) (id::idl)
-    | "`("; tc = LIST1 typeclass_constraint SEP "," ; ")" ->
-	List.map (fun (n, b, t) -> LocalRawAssum ([n], Generalized (Implicit, Explicit, b), t)) tc
-    | "`{"; tc = LIST1 typeclass_constraint SEP "," ; "}" ->
-	List.map (fun (n, b, t) -> LocalRawAssum ([n], Generalized (Implicit, Implicit, b), t)) tc
+  open_binders:
+    (* Same as binders but parentheses around a closed binder are optional if
+       the latter is unique *)
+    [ [ (* open binder *)
+        idl = LIST1 name; ":"; c = lconstr ->
+          [LocalRawAssum (idl,Default Explicit,c)]
+	(* binders factorized with open binder *)
+      | idl = LIST1 name; bl = binders ->
+          let t = CHole (loc, Some (Evd.BinderType (snd (List.hd idl)))) in
+          LocalRawAssum (idl,Default Explicit,t)::bl
+      | bl = closed_binder; bl' = binders ->
+	  bl@bl'
     ] ]
+  ;
+  binders:
+    [ [ l = LIST0 binder -> List.flatten l ] ]
   ;
   binder:
-    [ [ id=name -> ([id],Default Explicit,CHole (loc, None))
-      | "("; idl=LIST1 name; ":"; c=lconstr; ")" -> (idl,Default Explicit,c)
-      | "{"; idl=LIST1 name; ":"; c=lconstr; "}" -> (idl,Default Implicit,c)
+    [ [ id = name -> [LocalRawAssum ([id],Default Explicit,CHole (loc, None))]
+      | bl = closed_binder -> bl ] ]
+  ;
+  closed_binder:
+    [ [ "("; id=name; idl=LIST1 name; ":"; c=lconstr; ")" ->
+          [LocalRawAssum (id::idl,Default Explicit,c)]
+      | "("; id=name; ":"; c=lconstr; ")" ->
+          [LocalRawAssum ([id],Default Explicit,c)]
+      | "("; id=name; ":="; c=lconstr; ")" ->
+          [LocalRawDef (id,c)]
+      | "("; id=name; ":"; t=lconstr; ":="; c=lconstr; ")" ->
+          [LocalRawDef (id,CCast (join_loc (constr_loc t) loc,c, CastConv (DEFAULTcast,t)))]
+      | "{"; id=name; "}" ->
+          [LocalRawAssum ([id],Default Implicit,CHole (loc, None))]
+      | "{"; id=name; idl=LIST1 name; ":"; c=lconstr; "}" ->
+          [LocalRawAssum (id::idl,Default Implicit,c)]
+      | "{"; id=name; ":"; c=lconstr; "}" ->
+          [LocalRawAssum ([id],Default Implicit,c)]
+      | "{"; id=name; idl=LIST1 name; "}" ->
+          List.map (fun id -> LocalRawAssum ([id],Default Implicit,CHole (loc, None))) (id::idl)
+      | "`("; tc = LIST1 typeclass_constraint SEP "," ; ")" ->
+	  List.map (fun (n, b, t) -> LocalRawAssum ([n], Generalized (Implicit, Explicit, b), t)) tc
+      | "`{"; tc = LIST1 typeclass_constraint SEP "," ; "}" ->
+	  List.map (fun (n, b, t) -> LocalRawAssum ([n], Generalized (Implicit, Implicit, b), t)) tc
     ] ]
   ;
   typeclass_constraint:
