@@ -354,10 +354,9 @@ module Constr =
     let pattern = Gram.entry_create "constr:pattern"
     let constr_pattern = gec_constr "constr_pattern"
     let lconstr_pattern = gec_constr "lconstr_pattern"
-    let binder = Gram.entry_create "constr:binder"
-    let binder_let = Gram.entry_create "constr:binder_let"
-    let binders_let = Gram.entry_create "constr:binders_let"
-    let binders_let_fixannot = Gram.entry_create "constr:binders_let_fixannot"
+    let closed_binder = Gram.entry_create "constr:closed_binder"
+    let binders = Gram.entry_create "constr:binders"
+    let binders_fixannot = Gram.entry_create "constr:binders_fixannot"
     let typeclass_constraint = Gram.entry_create "constr:typeclass_constraint"
     let record_declaration = Gram.entry_create "constr:record_declaration"
     let appl_arg = Gram.entry_create "constr:appl_arg"
